// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/widgets/separator date separator with text 1`] = `
<div
  className="Separator BasicSeparator"
  data-testid="basicSeparator"
>
  <hr
    className="separator__hr"
  />
  <div
    className="separator__text"
  >
    Some text
  </div>
</div>
`;

exports[`components/widgets/separator notification message separator with text 1`] = `
<div
  className="Separator NotificationSeparator"
  data-testid="NotificationSeparator"
>
  <hr
    className="separator__hr"
  />
  <div
    className="separator__text"
  >
    Some text
  </div>
</div>
`;

exports[`components/widgets/separator notification message separator without text 1`] = `
<div
  className="Separator NotificationSeparator"
  data-testid="NotificationSeparator"
>
  <hr
    className="separator__hr"
  />
</div>
`;
